--- a/style.css
+++ b/style.css
@@ -169,6 +169,8 @@ nav.sticky .menu-btn{
 /* About Section Styling */
 /* Those Elements Where We Have Apply Same CSS,
  I'm Selecting Directly 'Section Tag' and 'Class'  */
+
+
 section{
   padding-top: 40px;
 }
@@ -512,3 +514,18 @@ footer .text span a:hover{
     color: #4070f4;
   }
 }
+
+.bold-txt {
+  background-image: linear-gradient(302deg, rgba(18,18,144,1) 7%, rgba(35,160,200,1) 45%);
+  border-radius: 6px;
+  padding: 3px 6px;
+  color: #FFF;
+  line-height: 2px;
+}
+
+p{
+  line-height: 2;
+}
+
+/* background: rgb(18,18,144);
+background: linear-gradient(302deg, rgba(18,18,144,1) 7%, rgba(35,160,200,1) 45%);*/
